--- a/Semanas/Tema3_Modulos.ipynb
+++ b/Semanas/Tema3_Modulos.ipynb
@@ -664,7 +664,7 @@
     "    </tr>\n",
     "    <tr>\n",
     "      <td>align</td>\n",
-    "      <td>La alineación de las barras con respecto a las posiciones x. Puede ser \"center\" (centro), \"edge\" (borde) o \"align\" (alineado), y su valor predeterminado es \"center\".</td>\n",
+    "      <td>La alineación de las barras con respecto a las posiciones x. Puede ser \"center\" (centro) o \"edge\" (borde). El valor predeterminado es \"center\".</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>color</td>\n",
@@ -672,15 +672,23 @@
     "    </tr>\n",
     "    <tr>\n",
     "      <td>edgecolor</td>\n",
-    "      <td>El color del borde de las barras. Es opcional y su valor predeterminado es \"None\". Puede ser un color específico o \"None\" para no dibujar bordes.</td>\n",
+    "      <td>El color del borde de las barras. Es opcional y su valor predeterminado es None. Puede ser un color específico o None para no dibujar bordes.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>linewidth</td>\n",
-    "      <td>El ancho del borde de las barras. Es opcional y su valor predeterminado es \"None\". Puede ser un número que representa el ancho del borde en puntos.</td>\n",
+    "      <td>El ancho del borde de las barras. Es opcional. Puede ser un número que representa el grosor del borde en puntos. Si no se especifica, se usa el valor por defecto del sistema.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>tick_label</td>\n",
     "      <td>Las etiquetas de los ticks en el eje x. Es opcional y se utiliza para etiquetar cada barra en el eje x. Debe ser una secuencia de etiquetas del mismo tamaño que los valores x.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td>label</td>\n",
+    "      <td>Etiqueta para incluir en la leyenda del gráfico. Es útil cuando se quieren mostrar varias series de barras con `plt.legend()`.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td>alpha</td>\n",
+    "      <td>El nivel de transparencia de las barras. Es un valor entre 0 (completamente transparente) y 1 (completamente opaco). El valor por defecto es 1.</td>\n",
     "    </tr>\n",
     "  </tbody>\n",
     "</table>\n"
@@ -775,6 +783,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un histograma es una representación gráfica de la distribución de frecuencias de un conjunto de datos. Divide el rango de los datos en intervalos (`bins`) y cuenta cuántos valores caen en cada intervalo.\n",
+    "\n",
+    "A diferencia del gráfico de barras, el histograma se utiliza para variables numéricas continuas, y los intervalos (bins) son contiguos."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -789,35 +806,43 @@
     "  <tbody>\n",
     "    <tr>\n",
     "      <td>x</td>\n",
-    "      <td>El conjunto de datos que se utilizará para crear el histograma. Puede ser un arreglo NumPy, una lista u otra estructura de datos similar.</td>\n",
+    "      <td>El conjunto de datos numéricos a representar. Puede ser una lista, un arreglo NumPy o una serie de pandas. También se acepta una lista de listas para graficar múltiples histogramas superpuestos.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>bins</td>\n",
-    "      <td>El número de contenedores (bins) en los que se divide el rango de valores. Puede ser un número entero que representa el número de contenedores o una secuencia que especifica los bordes de los contenedores.</td>\n",
+    "      <td>Controla la cantidad y posición de los intervalos del histograma. Puede ser un número entero (cantidad de bins), una lista de bordes de los bins, o una regla automática como 'auto', 'sturges', 'fd', etc.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>range</td>\n",
-    "      <td>El rango de valores que se tendrá en cuenta al construir el histograma. Puede ser una tupla de dos valores numéricos que representan el límite inferior y el límite superior del rango.</td>\n",
+    "      <td>Una tupla (min, max) que define el rango de los valores a incluir. Los valores fuera de este rango se ignoran. Si no se especifica, se usa el mínimo y máximo del conjunto de datos.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>density</td>\n",
-    "      <td>Si se establece en `True`, el histograma se normaliza de modo que el área total sea igual a 1, lo que representa una densidad de probabilidad estimada. Si se establece en `False` (valor predeterminado), el histograma muestra el número de muestras en cada contenedor.</td>\n",
+    "      <td>Si se establece en True, se normaliza el histograma para que el área total sea igual a 1, mostrando una estimación de la densidad de probabilidad. Si es False (por defecto), se muestra el conteo de observaciones por bin.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>cumulative</td>\n",
-    "      <td>Si se establece en `True`, se muestra un histograma acumulativo en lugar de un histograma normal. Esto representa la acumulación de la frecuencia en cada contenedor en lugar de la frecuencia instantánea.</td>\n",
+    "      <td>Si se establece en True, el histograma se acumula desde la izquierda (o desde la derecha si cumulative='-'). Útil para visualizar funciones de distribución acumulada.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>color</td>\n",
-    "      <td>El color de las barras del histograma. Puede ser una cadena de color reconocible por `matplotlib`, como \"red\" o \"#FF0000\". También se pueden utilizar abreviaciones de colores como \"r\" para rojo, \"b\" para azul, \"g\" para verde, entre otros.</td>\n",
+    "      <td>El color de las barras del histograma. Puede ser una cadena de color estándar de Matplotlib (como 'blue', 'red'), un código hexadecimal (como '#FF5733') o una lista si se grafican múltiples conjuntos.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>alpha</td>\n",
-    "      <td>La transparencia de las barras del histograma. Puede ser un valor numérico entre 0 y 1, donde 0 significa completamente transparente y 1 significa completamente opaco.</td>\n",
+    "      <td>El nivel de opacidad de las barras. Es un valor entre 0 (completamente transparente) y 1 (completamente opaco). Útil para superponer histogramas.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>label</td>\n",
-    "      <td>La etiqueta asignada al histograma. Las etiquetas se utilizan para crear una leyenda que describe cada conjunto de datos en el gráfico.</td>\n",
+    "      <td>Etiqueta que describe el conjunto de datos, usada para mostrar una leyenda con plt.legend(). Es especialmente útil cuando se grafican varios histogramas en la misma figura.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td>edgecolor</td>\n",
+    "      <td>Color del borde de las barras del histograma. Mejora la visibilidad de los contornos, especialmente cuando las barras tienen colores similares.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td>histtype</td>\n",
+    "      <td>Tipo de histograma. Puede ser 'bar' (predeterminado), 'step', 'stepfilled' o 'barstacked'. Cambia la forma visual del histograma.</td>\n",
     "    </tr>\n",
     "  </tbody>\n",
     "</table>\n"
@@ -854,44 +879,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Definir los datos\n",
-    "x1 = [0.25, 1.25, 2.25, 3.25, 4.25]\n",
-    "y1 = [10, 55, 80, 32, 40]\n",
-    "x2 = [0.75, 1.75, 2.75, 3.75, 4.75]\n",
-    "y2 = [42, 26, 10, 29, 66]\n",
-    "\n",
-    "\n",
-    "#Configurar las características del gráfico\n",
-    "plt.scatter(x1, y1, label = 'Datos 1',color = 'red')\n",
-    "plt.scatter(x2, y2,label = 'Datos 2', color = 'purple')\n",
-    "\n",
-    "\n",
-    "#Definir título y nombres de ejes\n",
-    "plt.title('Gráfico de dispersión')\n",
-    "plt.ylabel('Eje Y')\n",
-    "plt.xlabel('Eje X')\n",
-    "\n",
-    "\n",
-    "#Mostrar leyenda y figura\n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Argumentos más comunes en la función `plt.scatter()`."
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -936,36 +923,31 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Gráfico circular"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Definir los datos\n",
-    "dormir =[7,8,6,11,7]\n",
-    "comer = [2,3,4,3,2]\n",
-    "trabajar =[7,8,7,2,2]\n",
-    "recreación = [8,5,7,8,13]\n",
+    "x1 = [0.25, 1.25, 2.25, 3.25, 4.25]\n",
+    "y1 = [10, 55, 80, 32, 40]\n",
+    "x2 = [0.75, 1.75, 2.75, 3.75, 4.75]\n",
+    "y2 = [42, 26, 10, 29, 66]\n",
     "\n",
-    "divisiones = [7,2,2,13]\n",
-    "actividades = ['Dormir','Comer','Trabajar','Recreación']\n",
-    "colores = ['red','purple','blue','orange']\n",
     "\n",
     "#Configurar las características del gráfico\n",
-    "plt.pie(divisiones, labels=actividades, colors=colores, startangle=45, shadow=True, explode=(0.1,0,0,.25), autopct='%1.2f%%')\n",
+    "plt.scatter(x1, y1, label = 'Datos 1',color = 'red')\n",
+    "plt.scatter(x2, y2,label = 'Datos 2', color = 'purple')\n",
     "\n",
-    "#Definir título\n",
-    "plt.title('Gráfico circular')\n",
     "\n",
-    "#Mostrar figura\n",
+    "#Definir título y nombres de ejes\n",
+    "plt.title('Gráfico de dispersión')\n",
+    "plt.ylabel('Eje Y')\n",
+    "plt.xlabel('Eje X')\n",
+    "\n",
+    "\n",
+    "#Mostrar leyenda y figura\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
@@ -974,11 +956,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Argumentos más comunes en la función `plt.pie()`."
+    "## Gráfico circular"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1025,6 +1006,32 @@
     "  </tbody>\n",
     "</table>\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Definir los datos\n",
+    "dormir =[7,8,6,11,7]\n",
+    "comer = [2,3,4,3,2]\n",
+    "trabajar =[7,8,7,2,2]\n",
+    "recreación = [8,5,7,8,13]\n",
+    "\n",
+    "divisiones = [7,2,2,13]\n",
+    "actividades = ['Dormir','Comer','Trabajar','Recreación']\n",
+    "colores = ['red','purple','blue','orange']\n",
+    "\n",
+    "#Configurar las características del gráfico\n",
+    "plt.pie(divisiones, labels=actividades, colors=colores, startangle=45, shadow=True, explode=(0.1,0,0,.25), autopct='%1.2f%%')\n",
+    "\n",
+    "#Definir título\n",
+    "plt.title('Gráfico circular')\n",
+    "\n",
+    "#Mostrar figura\n",
+    "plt.show()"
    ]
   },
   {
