--- a/Semanas/Tema3_Modulos.ipynb
+++ b/Semanas/Tema3_Modulos.ipynb
@@ -973,39 +973,38 @@
     "  <tbody>\n",
     "    <tr>\n",
     "      <td>x</td>\n",
-    "      <td>Los tamaños de los segmentos de la gráfica de pastel. Puede ser una lista de valores numéricos que representan los tamaños relativos de los segmentos.</td>\n",
+    "      <td>Secuencia de valores numéricos que representan los tamaños relativos de las porciones del gráfico circular. Los valores no tienen que estar normalizados, ya que se ajustan automáticamente al total.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>labels</td>\n",
-    "      <td>Las etiquetas de los segmentos. Puede ser una lista de strings que representan las etiquetas de cada segmento. La longitud de esta lista debe ser igual a la longitud de la lista de tamaños.</td>\n",
+    "      <td>Secuencia de cadenas que etiquetan cada segmento del gráfico. Debe tener la misma longitud que <code>x</code>.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>colors</td>\n",
-    "      <td>Los colores de los segmentos. Puede ser una lista de colores en formato hexadecimal ('#RRGGBB'), nombres de colores reconocidos por `matplotlib` o valores numéricos que representan colores en una escala de colores.</td>\n",
+    "      <td>Lista de colores para cada segmento. Puede contener nombres de colores, códigos hexadecimales (como <code>'#FF5733'</code>) o referencias a colormaps de Matplotlib.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>explode</td>\n",
-    "      <td>El desplazamiento de los segmentos. Puede ser una lista de valores numéricos que representan el desplazamiento de cada segmento de la gráfica de pastel respecto al centro. Un valor mayor que cero separará el segmento correspondiente del resto de la gráfica.</td>\n",
+    "      <td>Lista de valores numéricos (uno por segmento) que determinan cuánto se separa cada porción del centro del gráfico. El valor por defecto es 0 para todos; valores mayores a 0 separan visualmente el segmento.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>autopct</td>\n",
-    "      <td>El formato de los porcentajes. Puede ser una cadena de formato que determina cómo se muestran los porcentajes de cada segmento. Por ejemplo, \"%1.1f%%\" muestra un decimal y el símbolo de porcentaje.</td>\n",
+    "      <td>Cadena de formato o función que determina cómo se muestran los porcentajes en los segmentos. Por ejemplo, <code>\"%1.1f%%\"</code> mostrará un decimal. También puede ser una función personalizada.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>startangle</td>\n",
-    "      <td>El ángulo de inicio de la gráfica de pastel. Puede ser un valor numérico que representa el ángulo en grados desde donde comienza la primera cuña de la gráfica.</td>\n",
+    "      <td>Ángulo de inicio (en grados) desde el eje horizontal. Controla la rotación inicial del gráfico. El valor por defecto es 0.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>shadow</td>\n",
-    "      <td>Si se muestra una sombra debajo de la gráfica de pastel. Puede ser `True` para mostrar una sombra o `False` para no mostrarla.</td>\n",
+    "      <td>Valor booleano que indica si se debe dibujar una sombra debajo del gráfico. Mejora el contraste visual. El valor por defecto es <code>False</code>.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td>pctdistance</td>\n",
-    "      <td>La distancia de los porcentajes respecto al centro de la gráfica de pastel. Puede ser un valor numérico entre 0 y 1 que indica la distancia proporcional al radio de la gráfica.</td>\n",
+    "      <td>Distancia radial desde el centro en la que se colocan los porcentajes. Valor entre 0 y 1; por defecto es <code>0.6</code>. Un valor más cercano a 0 los acerca al centro.</td>\n",
     "    </tr>\n",
     "  </tbody>\n",
-    "</table>\n",
-    "\n"
+    "</table>\n"
    ]
   },
   {
@@ -1014,24 +1013,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Definir los datos\n",
-    "dormir =[7,8,6,11,7]\n",
-    "comer = [2,3,4,3,2]\n",
-    "trabajar =[7,8,7,2,2]\n",
-    "recreación = [8,5,7,8,13]\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "divisiones = [7,2,2,13]\n",
-    "actividades = ['Dormir','Comer','Trabajar','Recreación']\n",
-    "colores = ['red','purple','blue','orange']\n",
+    "# Datos: horas por actividad a lo largo de 5 días\n",
+    "dormir = [7, 8, 6, 11, 7]\n",
+    "comer = [2, 3, 4, 3, 2]\n",
+    "trabajar = [7, 8, 7, 2, 2]\n",
+    "recreacion = [8, 5, 7, 8, 13]\n",
     "\n",
-    "#Configurar las características del gráfico\n",
-    "plt.pie(divisiones, labels=actividades, colors=colores, startangle=45, shadow=True, explode=(0.1,0,0,.25), autopct='%1.2f%%')\n",
+    "# Sumar las horas por actividad\n",
+    "divisiones = [sum(dormir), sum(comer), sum(trabajar), sum(recreacion)]\n",
+    "actividades = ['Dormir', 'Comer', 'Trabajar', 'Recreación']\n",
+    "colores = ['red', 'purple', 'blue', 'orange']\n",
+    "explode = (0.1, 0, 0, 0.25)  # Resaltar dormir y recreación\n",
     "\n",
-    "#Definir título\n",
-    "plt.title('Gráfico circular')\n",
+    "# Configurar tamaño del gráfico\n",
+    "plt.figure(figsize=(8, 6))\n",
     "\n",
-    "#Mostrar figura\n",
-    "plt.show()"
+    "# Crear gráfico circular\n",
+    "plt.pie(divisiones,labels=actividades,colors=colores,startangle=90,shadow=True,explode=explode,autopct='%1.1f%%')\n",
+    "\n",
+    "# Título del gráfico\n",
+    "plt.title('Distribución del tiempo semanal por actividad')\n",
+    "\n",
+    "# Mostrar figura\n",
+    "plt.axis('equal')  # Mantiene proporciones circulares\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -1154,12 +1161,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "arreglo = np.array([1, 2, 3, 4, 5]) \n",
-    "print(arreglo)\n",
+    "print(arreglo)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "arreglo2d = np.array([list(range(1,4)), list(range(4,7)), list(range(7,10))])\n",
     "print(arreglo2d)"
@@ -1199,9 +1225,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5,)\n",
+      "1\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "print(arreglo.shape)   # Muestra las dimensiones del ndarray\n",
     "print(arreglo.ndim)    # Muestra el número de dimensiones del ndarray\n",
@@ -1263,9 +1299,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n"
+     ]
+    }
+   ],
    "source": [
     "array = np.array([1, 2, 3, 4, 5])\n",
     "print(array.dtype)"
@@ -1273,9 +1317,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64\n"
+     ]
+    }
+   ],
    "source": [
     "array = np.array([1, 2, 3, 4, 5, 6.1234])\n",
     "print(array.dtype)"
@@ -1283,9 +1335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<U6\n"
+     ]
+    }
+   ],
    "source": [
     "array = np.array([\"Hola_5\", \"que\", \"tal\"])\n",
     "print(array.dtype)"
@@ -1293,9 +1353,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<U32\n"
+     ]
+    }
+   ],
    "source": [
     "array = np.array([\"Hola\", 1234, 3.1415])\n",
     "print(array.dtype)\n",
@@ -1507,7 +1575,7 @@
     "\n",
     "Las operaciones a nivel de elemento operan los elementos que ocupan la misma posición en dos arrays. Se necesitan, por tanto, dos arrays con las mismas dimensiones y el resultado es una array de la misma dimensión.\n",
     "\n",
-    "Los operadores mamemáticos `+, -, *, /, %, **` se utilizan para la realizar suma, resta, producto, cociente, resto y potencia a nivel de elemento."
+    "Los operadores matemáticos `+, -, *, /, %, **` se utilizan para la realizar suma, resta, producto, cociente, resto y potencia a nivel de elemento respectivamente."
    ]
   },
   {
