--- a/Semanas/Tema3_Modulos.ipynb
+++ b/Semanas/Tema3_Modulos.ipynb
@@ -1463,11 +1463,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En Python, cuando copias una estructura como una lista o un array, debes distinguir entre:\n",
+    "\n",
+    "* `Copia por referencia`: Ambas variables apuntan al mismo objeto.\n",
+    "\n",
+    "* `Copia  superficial`: Se copia el contenedor, pero los elementos siguen compartidos (relevante con estructuras anidadas). Es decir, por ejemplo si se copia superficielmente un  arrays de dos dimensiones, todos los cambios realizados en un subarray se verán reflejados en el original."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los arrays de dos dimensiones también están referenciados en memoria, por lo que todos los cambios realizados en un subarray se verán reflejados en el original."
+    "### Copia por referencia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100   2   3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr1 = np.array([1, 2, 3])\n",
+    "\n",
+    "\n",
+    "arr2 = arr1\n",
+    "arr2[0] = 100\n",
+    "\n",
+    "print(arr1)  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Copia con `np.copy()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "arr1 = np.array([1, 2, 3])\n",
+    "arr2 = np.copy(arr1)\n",
+    "\n",
+    "arr2[0] = 100\n",
+    "print(arr1) \n",
+    "print(arr2) "
    ]
   },
   {
@@ -1498,11 +1556,65 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 4 6]\n",
+      "[4 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1, 2, 3], [4, 5, 6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "print(a[(a % 2 == 0)])\n",
+    "print(a[a % 2 == 0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(a[(a % 2 == 0) &  (a > 2)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.array([[1, 2, 3],\n",
+    "              [4, 5, 6],\n",
+    "              [7, 8, 9]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultado = b[b > 4]\n",
+    "print(resultado)"
    ]
   },
   {
@@ -1542,7 +1654,6 @@
     "a = np.array([1, 2, 3])\n",
     "b = np.array([4, 5, 6])\n",
     "\n",
-    "# Suma\n",
     "#print(np.add(a, b))        \n",
     "print(a+b)\n"
    ]
@@ -1556,7 +1667,8 @@
     "arr_5 = np.array([[1,2],[3,4]])\n",
     "arr_6 = np.array([[5,6],[7,8]])\n",
     "\n",
-    "arr_5 + arr_6"
+    "suma = arr_5 + arr_6\n",
+    "print(suma)"
    ]
   },
   {
@@ -1569,14 +1681,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3) (3,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_40696/4018219749.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubtract\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mresta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3) (3,3) "
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# Resta\n",
     "print(np.subtract(a, b))   \n",
-    "print(a-b)\n",
+    "resta = a-b\n",
+    "print(resta)\n",
     "\n",
     "\n"
    ]
@@ -1595,7 +1718,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Multiplicación\n",
     "print(np.multiply(a, b))   \n",
     "print(a*b)\n",
     "\n",
@@ -1617,8 +1739,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "#Division\n",
     "#print(np.divide(a, b))     \n",
     "print(a/b)\n",
     "\n",
@@ -1640,9 +1760,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Potencias\n",
-    "print(a**2)\n",
-    "\n",
+    "print(a**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         0.5        0.33333333]\n",
+      " [0.25       0.2        0.16666667]]\n"
+     ]
+    }
+   ],
+   "source": [
     "#Potencias interesantes\n",
     "\n",
     "print(a**-1.)"
@@ -1653,7 +1788,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Álgebra Matricial"
+    "## Álgebra Matricial (submódulo `linalg`)"
    ]
   },
   {
@@ -1677,9 +1812,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para realizar el producto escalar de dos vectores se utiliza el operador `@` o el siguiente método:\n",
-    "\n",
-    "`u.dot(v)`: Devuelve el producto escalar de los vectores u y v."
+    "Para realizar el producto escalar de dos vectores se utiliza el operador `@` o el siguiente método: `u.dot(v)`: Devuelve el producto escalar de los vectores u y v."
    ]
   },
   {
@@ -1808,9 +1941,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "a = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
@@ -1978,7 +2119,7 @@
    "source": [
     "Para resolver un sistema de ecuaciones lineales se utiliza la función siguiente:\n",
     "\n",
-    "`solve(a, b)`: Devuelve la solución del sistema de ecuaciones lineales con los coeficientes de la matriz `a` y los términos independientes de la matriz `b`."
+    "`solve(A, B)`: Devuelve la solución del sistema de ecuaciones lineales con los coeficientes de la matriz `A` y los términos independientes de la matriz `B`."
    ]
   },
   {
@@ -2007,8 +2148,8 @@
     "# Sistema de dos ecuaciones y dos incógnitas\n",
     "# x + 2y = 1\n",
     "# 3x + 5y = 2 \n",
-    "a = np.array([[1, 2], [3, 5]])\n",
-    "b = np.array([1, 2])\n",
+    "A = np.array([[1, 2], [3, 5]])\n",
+    "B = np.array([1, 2])\n",
     "print(np.linalg.solve(a, b))"
    ]
   },
