--- a/Temas/Tema5_Numpy.ipynb
+++ b/Temas/Tema5_Numpy.ipynb
@@ -1509,24 +1509,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "# Primer nivel, 2 elementos en ancho\n",
-    "arreglo_1d = np.array(\n",
-    "    [1, 2]\n",
-    ")\n",
-    "arreglo_1d"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Primer nivel, 2 elementos en ancho\n",
+    "arreglo_1d = np.array(\n",
+    "    [1, 2]\n",
+    ")\n",
+    "print(arreglo_1d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Segundo nivel, 2 elementos en ancho por 2 de alto,\n",
@@ -1535,18 +1559,28 @@
     "    [1, 2],\n",
     "    [3, 4]\n",
     "])\n",
-    "arreglo_2d"
+    "print(arreglo_2d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 2]\n",
+      "  [3 4]]\n",
+      "\n",
+      " [[5 6]\n",
+      "  [7 8]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# Tercer nivel, 2 elementos en ancho por 2 de alto\n",
-    "# por 2 de profundidad, 8 elementos en total\n",
+    "# Tercer nivel, 2 elementos en ancho por 2 de alto, por 2 de profundidad, 8 elementos en total\n",
     "arreglo_3d = np.array([\n",
     "    [\n",
     "        [1, 2],\n",
@@ -1557,7 +1591,7 @@
     "        [7, 8]\n",
     "    ]\n",
     "])\n",
-    "arreglo_3d"
+    "print(arreglo_3d)"
    ]
   },
   {
@@ -1569,18 +1603,213 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   0  1  2\n",
-      "0  1  2  3\n",
-      "1  4  5  6\n"
+      "3\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "print(arreglo_3d[0][1][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Crear un array de 3 dimensiones\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
     "\n",
-    "matriz = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "df = pd.DataFrame(matriz)\n",
-    "print(df)\n"
+    "array3d = np.array([\n",
+    "    [[1, 2, 3, 4],\n",
+    "     [5, 6, 7, 8],\n",
+    "     [9, 10, 11, 12]],\n",
+    "    \n",
+    "    [[13, 14, 15, 16],\n",
+    "     [17, 18, 19, 20],\n",
+    "     [21, 22, 23, 24]]\n",
+    "])\n",
+    "\n",
+    "print(array3d.shape)  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Accede al bloque 0, fila 1, columna 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array3d[0, 1, 2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Todas las capas, fila 1, todas las columnas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array3d[:, 1, :] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 4)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Número de dimensiones\n",
+    "array3d.ndim       \n",
+    "# Forma del array\n",
+    "array3d.shape       \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cambiar forma.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Permite cambiar la forma (dimensiones) de un array sin cambiar sus datos.\n",
+    "\n",
+    "Por ejemplo, puedes convertir un array de 1 dimensión con 6 elementos en una matriz de 2×3, o un array de 2×3 en uno de 3×2, siempre que el número total de elementos se mantenga igual.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1,  2,  3],\n",
+       "        [ 4,  5,  6]],\n",
+       "\n",
+       "       [[ 7,  8,  9],\n",
+       "        [10, 11, 12]],\n",
+       "\n",
+       "       [[13, 14, 15],\n",
+       "        [16, 17, 18]],\n",
+       "\n",
+       "       [[19, 20, 21],\n",
+       "        [22, 23, 24]]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array3d.reshape(4,2,3)  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transponer ejes\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El método transpose en NumPy permite reordenar los ejes (o dimensiones) de un array, es decir, cambiar la manera en que los datos están organizados en el espacio multidimensional.\n",
+    "\n",
+    "En matrices 2D, es equivalente a la transpuesta matemática, donde filas y columnas se intercambian.\n",
+    "En arrays de más dimensiones, puedes especificar un nuevo orden para los ejes.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1, 13],\n",
+       "        [ 5, 17],\n",
+       "        [ 9, 21]],\n",
+       "\n",
+       "       [[ 2, 14],\n",
+       "        [ 6, 18],\n",
+       "        [10, 22]],\n",
+       "\n",
+       "       [[ 3, 15],\n",
+       "        [ 7, 19],\n",
+       "        [11, 23]],\n",
+       "\n",
+       "       [[ 4, 16],\n",
+       "        [ 8, 20],\n",
+       "        [12, 24]]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array3d.transpose() "
    ]
   },
   {
